--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,3 +50,19 @@ jobs:
     - name: Build
       if: github.event.pull_request.merged==true 
       run: npm run build:prod
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        repository: ${{github.repository}}
+    - name: All things angular
+      uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2 ## replace by latest version without it you will see Expected format {org}/{repo}[/path]@ref. Actual 'AhsanAyaz/angular-deploy-gh-pages-actions',Input string was not in a correct format.
+      with:
+        github_access_token: ${{ secrets.ACCESS_TOKEN }} # see the Configuration section for how you can create secrets
+        deploy_branch: gh-pages # The branch the action should deploy to.
+        angular_dist_build_folder: dist/my-project # The folder where your project is supposed to be after running ng build by the action.
