--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,4 +65,4 @@ jobs:
       with:
         github_access_token: ${{ secrets.MYSECRETNAME }} # see the Configuration section for how you can create secrets
         deploy_branch: gh-pages # The branch the action should deploy to.
-        angular_dist_build_folder: dist/hello-world # The folder where your project is supposed to be after running ng build by the action.
+        angular_dist_build_folder: dist/hello-world/ # The folder where your project is supposed to be after running ng build by the action.
