--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,9 +59,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        repository: ${{github.repository}}
+        repository: ${{github.repository}}/hello-world/
     - name: All things angular
-      uses: AhsanAyaz/angular-deploy-gh-pages-actions@v3 ## replace by latest version without it you will see Expected format {org}/{repo}[/path]@ref. Actual 'AhsanAyaz/angular-deploy-gh-pages-actions',Input string was not in a correct format.
+      uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2 ## replace by latest version without it you will see Expected format {org}/{repo}[/path]@ref. Actual 'AhsanAyaz/angular-deploy-gh-pages-actions',Input string was not in a correct format.
       with:
         github_access_token: ${{ secrets.MYSECRETNAME }} # see the Configuration section for how you can create secrets
         deploy_branch: gh-pages # The branch the action should deploy to.
