--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,7 +54,9 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory : hello-world
     steps:
     - name: Checkout
       uses: actions/checkout@v3
