--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,14 +54,11 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory : hello-world
     steps:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        repository: ${{github.repository}}
+        repository: ${{github.repository}}/hello-world/
     - name: All things angular
       uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2 ## replace by latest version without it you will see Expected format {org}/{repo}[/path]@ref. Actual 'AhsanAyaz/angular-deploy-gh-pages-actions',Input string was not in a correct format.
       with:
