--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: All things angular
       uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2 ## replace by latest version without it you will see Expected format {org}/{repo}[/path]@ref. Actual 'AhsanAyaz/angular-deploy-gh-pages-actions',Input string was not in a correct format.
       with:
-        angular_project_dir: ./hello-world
+        angular_project_dir: ./hello-world/
         base_href: /hello-world/
         github_access_token: ${{ secrets.MYSECRETNAME }} # see the Configuration section for how you can create secrets
         deploy_branch: master # The branch the action should deploy to.
