--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ on :
   pull_request :
     branches : ["main"]
     types: [closed]
+    
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
